--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 # IPython Security #
 ####################
 .ipython/profile_default/security/*
-.ipython/profile_default/db/
-.ipython/cython/
+.ipython/profile_default/db/*
+.ipython/profile_default/static/*
+.ipython/profile_default/ipython_*
+.ipython/cython/*
 
 oh-my-zsh/
 
